--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = espressif32
 board = nodemcu-32s
 framework = arduino
-upload_port = /dev/ttyUSB2
+upload_port = /dev/ttyUSB0
+debug_build_flags = -Os 
+board_upload.flash_size = 4MB
